--- a/reactstrap-observable/public/index.html
+++ b/reactstrap-observable/public/index.html
@@ -21,6 +21,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+
+  <style>
+    html {
+      height: 100%;
+    }
+
+    body {
+      height: 100%;
+      overflow-y: scroll;
+    }
+  </style>
 </head>
 
 <body>
